Fixed overflowing in feed content and frontpage comment

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -246,7 +246,7 @@ overflow: hidden;
 	list-style-type: none; float: left; min-height: 25px;
 	width: 192px; line-height: 12px; position: relative;
 	border: 0; padding: 5px 0px 5px 30px; font-size: 11px; color: #484848;
-	border-bottom: 1px solid #e9e9e9; }
+	border-bottom: 1px solid #e9e9e9; overflow: hidden; }
 #moviesList .movie .comments li a,
 #moviesList .movie .comments li a img { width: auto; height: auto; margin: 0 5px 0 0  }
 
@@ -515,8 +515,8 @@ margin-right: 3px; width: 150px;
 }
 #activities li .content { 
 	padding-left: 5px; border: 1px solid #dbdbdb; border-top: 0; border-bottom: 0;
-	background: #fff;
-	margin-left: 80px; min-height: 40px; color: #828282; letter-spacing: -0.1px;  }
+	background: #fff; overflow: hidden;
+	margin-left: 80px; min-height: 40px; color: #828282; }
 #activities li .content img { float: left; height: 35px; margin-right: 10px; }
 
 #activities_baloon { 
@@ -540,7 +540,7 @@ margin-right: 3px; width: 150px;
 #activities_baloon li:first-child { margin-top: 0px; border: 0; margin-top: 0; padding-top: 0 }
 #activities_baloon li .avatar { position: absolute!important; left: 0px; top: 10px }
 #activities_baloon li:first-child .avatar { top: 0 }
-#activities_baloon li .content { font-size: 11px; line-height: 12px; padding: 5px; }
+#activities_baloon li .content { font-size: 11px; line-height: 12px; padding: 5px; overflow: hidden; }
 #activities_baloon li:first-child .content { padding-top: 0 }
 #activities_baloon li .content img { float: left; height: 20px; margin-right: 10px; }
 #activities_baloon li:nth-child(even) .content { background: #f5f5f5; margin-right: 5px }
